[package]
name = "prochack"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

[lib]
name = "prochack"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "clownhack"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
]
